<resources>
    <string name="app_name">Link_Saver</string>
    <string name="new_board">New Board</string>
    <string name="title">Title</string>
    <string name="add_category_title">add category title</string>
    <string name="view">View</string>
    <string name="link_hint">Link</string>
    <string name="done">Done</string>
    <string name="past_link_about">past link about</string>
    <string name="add_subcategories_about">add subcategories about</string>
    <string name="add_new">Add new</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_picture">Select picture</string>
    <string name="your_link">Your link</string>
    <string name="edit_subcategory">Edit subcategory</string>
    <string name="delete_links">Delete links</string>

    <string-array name="board_menu">
        <item>Edit</item>
        <item>Delete</item>
        <item>Select picture</item>
    </string-array>

    <string-array name="sub_board_menu">
        <item>Add</item>
        <item>Edit</item>
        <item>Delete</item>
        <item>Select picture</item>
    </string-array>
</resources>
