<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_start"
        android:layout_marginEnd="@dimen/medium_margin_end"
        android:background="@drawable/ic_rectangle_add"
        android:elevation="@dimen/medium_elevation"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_top"
            android:layout_marginBottom="10dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editBoardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin_start"
            android:layout_marginEnd="@dimen/medium_margin_end"
            android:layout_marginBottom="@dimen/medium_margin_bottom"
            android:background="@drawable/rounded_edit_text"
            android:elevation="@dimen/medium_elevation"
            android:gravity="center"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boardTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/edit_subcategory"
            android:textSize="12sp" />

        <Button
            android:id="@+id/editSubBoardTitleDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/ic_big_button"
            android:text="@string/done"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            android:textColor="@color/button_text_color"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>