<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/medium_elevation"
            android:gravity="center_horizontal"
            android:background="@drawable/ic_rectangle_add"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/medium_margin_start"
            android:layout_marginEnd="@dimen/medium_margin_end">

            <TextView
                android:id="@+id/boardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_marginTop="@dimen/medium_margin_top"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextBoardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/boardTitle"
                android:layout_marginStart="@dimen/medium_margin_start"
                android:layout_marginEnd="@dimen/medium_margin_end"
                android:layout_marginBottom="@dimen/medium_margin_bottom"
                android:maxLength="20"
                android:elevation="@dimen/medium_elevation"
                android:background="@drawable/rounded_edit_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/categoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/add_category_title"
            android:textColor="@color/board_add"/>

        <Button
            android:id="@+id/addBoardDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_big_button"
            android:text="@string/done"
            android:layout_marginTop="4dp"
            android:textColor="@color/button_text_color"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            android:visibility="gone"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>