<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:gravity="center_horizontal"
            android:background="@drawable/ic_rectangle_add"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/boardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextBoardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/boardTitle"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:background="@drawable/ic_add_edit_text_rectangle"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addSubCategoriesAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_subcategories_about"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/hintAboutSubBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/subBoard_board_title"
                />

        </LinearLayout>

        <Button
            android:id="@+id/addSubcategoryDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_big_button"
            android:textColor="@color/button_text_color"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            android:layout_marginTop="35dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>